--- a/GC_Project/GC/GC.vcxproj
+++ b/GC_Project/GC/GC.vcxproj
@@ -113,13 +113,16 @@
   <ItemGroup>
     <ClCompile Include="allocator.cpp" />
     <ClCompile Include="collector.cpp" />
+    <ClCompile Include="list.cpp" />
     <ClCompile Include="shared.cpp" />
     <ClCompile Include="Test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="allocator.h" />
     <ClInclude Include="collector.h" />
+    <ClInclude Include="list.h" />
     <ClInclude Include="shared.h" />
+    <ClInclude Include="structs.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
