There was a complete logic change on whole project level. Using hashset to store occupied memory block info, list for storing free memory blocks. Implemented Mark and Sweep algorithm using those structures. Some bugs noticed.

--- a/GC_Project/GC/GC.vcxproj
+++ b/GC_Project/GC/GC.vcxproj
@@ -113,6 +113,7 @@
   <ItemGroup>
     <ClCompile Include="allocator.cpp" />
     <ClCompile Include="collector.cpp" />
+    <ClCompile Include="hashset.cpp" />
     <ClCompile Include="list.cpp" />
     <ClCompile Include="shared.cpp" />
     <ClCompile Include="Test.cpp" />
@@ -120,6 +121,7 @@
   <ItemGroup>
     <ClInclude Include="allocator.h" />
     <ClInclude Include="collector.h" />
+    <ClInclude Include="hashset.h" />
     <ClInclude Include="list.h" />
     <ClInclude Include="shared.h" />
     <ClInclude Include="structs.h" />
