Naming changes. Bug fixes. Collector has an array (will be scalable) of structures that contain info about thread handle, size of stack and approx starting address of thread stack. Implemented wrappers around  CreateThread, CreateThread's routine, CloseHandle. Implemented Suspending and Resuming threads in Collector's array. Implemented function for searching thread collection item. Implemented function for deinitializing the GC (currently in Test.cpp).

--- a/GC_Project/GC/GC.vcxproj
+++ b/GC_Project/GC/GC.vcxproj
@@ -113,7 +113,7 @@
   <ItemGroup>
     <ClCompile Include="allocator.cpp" />
     <ClCompile Include="collector.cpp" />
-    <ClCompile Include="hashset.cpp" />
+    <ClCompile Include="hashmap.cpp" />
     <ClCompile Include="list.cpp" />
     <ClCompile Include="shared.cpp" />
     <ClCompile Include="Test.cpp" />
@@ -121,7 +121,7 @@
   <ItemGroup>
     <ClInclude Include="allocator.h" />
     <ClInclude Include="collector.h" />
-    <ClInclude Include="hashset.h" />
+    <ClInclude Include="hashmap.h" />
     <ClInclude Include="list.h" />
     <ClInclude Include="shared.h" />
     <ClInclude Include="structs.h" />
