--- a/GC_Project/GC/GC.vcxproj
+++ b/GC_Project/GC/GC.vcxproj
@@ -111,19 +111,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="allocator.cpp" />
     <ClCompile Include="collector.cpp" />
+    <ClCompile Include="GC.cpp" />
     <ClCompile Include="hashmap.cpp" />
     <ClCompile Include="list.cpp" />
-    <ClCompile Include="shared.cpp" />
+    <ClCompile Include="heapManager.cpp" />
     <ClCompile Include="Test.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="allocator.h" />
     <ClInclude Include="collector.h" />
+    <ClInclude Include="GC.h" />
     <ClInclude Include="hashmap.h" />
     <ClInclude Include="list.h" />
-    <ClInclude Include="shared.h" />
+    <ClInclude Include="heapManager.h" />
     <ClInclude Include="structs.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
